@@ -14,9 +14,6 @@
         <skipUiTests>false</skipUiTests>
     </properties>
 
-
-
-
     <dependencies>
     <dependency>
             <groupId>it1901.infectiontracer</groupId>
@@ -103,7 +100,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                  <configuration>
-                   <skip.surefire.tests>${skipTests}</skip.surefire.tests>
+                    <argLine>
+                 @{argLine}  --add-opens infectiontracer.ui/infectiontracer.ui=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                    </argLine>
                     </configuration>
             </plugin>
 
@@ -131,7 +130,7 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.6</version>
                 <configuration>
-                            <mainClass>infectiontracer.ui.App</mainClass>
+                            <mainClass>infectiontracer.ui/infectiontracer.ui.App</mainClass>
                         </configuration>
             </plugin>
         </plugins>
